# alarmdecoder-webapp-modernized

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  1_Enhanced-Bootstrap3-Audit.ps1  2_Bootstrap3To5-Migration-Framework.ps1  2_Bootstrap3To5-Migration-Framework.ps1.txt  4_Find_ObsoleteJsUsage.ps1  Dockerfile  Makefile  README.md  auto_fix.py  docker-compose.yml  fabfile.py  manage.py  mkdocs.yml  pinegrow.json  pyproject.toml  pytest.ini  python-app.yml  replace_TextField.py  requirements.txt  safe_ruff_autofix.py  safe_ruff_autofix_v2.py  setup.py  tox.ini  wsgi.py  ystemctl list-unit-files --type=service  ystemctl status alarmdecoder.service
.github/workflows/: ci.yml
ad2web/: __init__.py  app.py  config.py  decoder.py  decorators.py  discovery.py  exporter.py  extensions.py  logwatch.py  mailer.py  upnp.py  utils.py  validators.py  widgets.py
ad2web/admin/: __init__.py  forms.py  views.py
ad2web/api/: __init__.py  constants.py  forms.py  models.py  utils.py  views.py
ad2web/app/: __init__.py  extensions.py
ad2web/app_legacy/: extensions.py  logger.py
ad2web/cameras/: __init__.py  constants.py  forms.py  models.py  types.py  views.py
ad2web/certificate/: __init__.py  constants.py  forms.py  models.py  views.py
ad2web/common/: models.py
ad2web/frontend/: __init__.py  forms.py  views.py
ad2web/keypad/: __init__.py  constants.py  forms.py  models.py  views.py
ad2web/log/: __init__.py  constants.py  models.py  views.py
ad2web/notifications/: __init__.py  constants.py  forms.py  models.py  types.py  util.py  views.py
ad2web/ser2sock/: __init__.py  ser2sock.py
ad2web/services/: alarm.py  alarm_service.py
ad2web/settings/: __init__.py  constants.py  forms.py  models.py  views.py
ad2web/setup/: __init__.py  constants.py  (+2 more)
alembic/: env.py
docs/: .env_example.md  api.md  bouncycastle.md  checklist.md  index.md  ser2sock.conf.example.md
scripts/: generate_test_routes.py
tests/: __init__.py  conftest.py  scaffold_tests.py  test_alarm_service.py  test_config.py.old  test_forms.py  test_main.py  test_mock_device.py  test_models.py  test_routes.py  test_settings.py  test_utils.py  test_views.py
(+78 files in other folders)
