[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alarmdecoder-webapp"
version = "1.0.0"
description = "Refactored Python 3.11+ WebApp for AlarmDecoder"
authors = [{name = "Modernized by AI"}]
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']
exclude = 'migrations'
