[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alarmdecoder-webapp"
version = "1.0.0"
description = "Refactored Python 3.11+ WebApp for AlarmDecoder"
authors = [{name = "Modernized by AI"}]
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']
exclude = 'migrations'

[tool.ruff]
# Maximum allowed line length for your code
line-length = 88

# Specify the Python version you're targeting (optional but recommended)
target-version = "py39"  # Replace with "py38", "py310", etc. as needed

# Error and warning codes you want Ruff to check
# For example: “E” for pycodestyle errors, “F” for pyflakes issues, “W” for warnings, etc.
# See Ruff’s documentation for complete code references.
select = ["E", "F", "W", "C90"]

# Codes to ignore. If, for example, you dislike E501 ("line too long"), you can ignore it.
ignore = ["E501"]

