[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alarmdecoder-webapp"
version = "1.0.0"
description = "Refactored Python 3.11+ WebApp for AlarmDecoder"
authors = [{name = "Modernized by AI"}]
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']
exclude = 'migrations'

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["ad2web"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@abc.abstractmethod",
]
